--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -513,7 +513,7 @@ jobs:
       - name: "Install os packages"
         run: |
           sudo apt update
-          sudo apt install libgl1-mesa-glx xvfb
+          sudo apt install libgl1-mesa-glx xvfb graphviz
 
       - name: "Test virtual framebuffer"
         run: |
@@ -685,7 +685,7 @@ jobs:
       - name: "Install OS packages"
         run: |
           apt update
-          apt install -y libgl1-mesa-glx xvfb libgomp1
+          apt install -y libgl1-mesa-glx xvfb libgomp1 graphviz
 
       - name: "Test virtual framebuffer"
         run: |
@@ -827,7 +827,7 @@ jobs:
       - name: "Installing missing package"
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgomp1
+          sudo apt-get install -y libgomp1 graphviz
 
       - name: "Setup Python"
         uses: actions/setup-python@v5
@@ -957,7 +957,7 @@ jobs:
       - name: "Installing missing package"
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgomp1
+          sudo apt-get install -y libgomp1 graphviz
 
       - name: "Setup Python"
         uses: actions/setup-python@v5
