--- a/.ci/requirements_minimal.txt
+++ b/.ci/requirements_minimal.txt
@@ -1,5 +1,6 @@
 pyfakefs==5.7.2
 pytest-cov==6.0.0
+pytest-profiling==1.8.1
 pytest-random-order==1.1.1
 pytest-rerunfailures==15.0
 pytest-timeout==2.3.1
