fix: reverting manual change in ``voper`` and removing ``-W`` flag in doc build

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -297,7 +297,7 @@ jobs:
 
       - name: "Build documentation"
         run: |
-          xvfb-run make -C doc html SPHINXOPTS="-j auto -W --keep-going"
+          xvfb-run make -C doc html SPHINXOPTS="-j auto"
 
       - name: "Substitute defective GIF"
         run: |
