feat: adding support to launch MAPDL on remote HPC clusters

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,10 @@ classifiers = [
 ]
 
 [project.optional-dependencies]
+hpc = [
+  "paramiko==3.5.0",
+]
+
 jupyter = [
     "jupyterlab>=3",
     "ipywidgets",
