--- a/pyproject.toml
+++ b/pyproject.toml
@@ -136,7 +136,9 @@ markers = [
 ]
 testpaths = "tests"
 image_cache_dir = "tests/.image_cache"
-log_cli = true
+# Output logging records as they are emitted directly into the console
+# https://docs.pytest.org/en/stable/how-to/logging.html#live-logs
+log_cli = true 
 
 [tool.isort]
 profile = "black"
