--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,9 +63,11 @@ tests = [
     "pyfakefs==5.7.4",
     "pyiges[full]==0.3.1",
     "pytest-cov==6.0.0",
+    "pytest-durations==1.3.1",
     "pytest-profiling==1.8.1",
     "pytest-pyvista==0.1.9",
     "pytest-random-order==1.1.1",
+    "pytest-reportlog==0.4.0",
     "pytest-rerunfailures==15.0",
     "pytest-timeout==2.3.1",
     "pytest==8.3.4",
