--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1246,7 +1246,7 @@ jobs:
 
 
   pytest-summary:
-    name: Print pytest summary for all the test jobs
+    name: Pytest summary for all the test jobs
     needs: [build-test-remote, build-test-ubuntu-local, build-test-ubuntu-minimal, build-test-ubuntu-console]
     if: always()
     runs-on: ubuntu-22.04          
@@ -1260,9 +1260,25 @@ jobs:
           cache: 'pip'
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
       
+      - name: "Install numpy"
+        run: python -m pip install numpy
+      
       - name: "Download artifacts"
         uses: actions/download-artifact@v4
-      
+        with:
+          path: "artifacts"
+
       - name: "List directories"
         run: |
           find . -mindepth 2 -maxdepth 2 -type f
+
+      - name: "Run script"
+        run: |
+          cd artifacts
+          python ../.ci/pytest_summary.py
+
+      - name: "Upload tests summary"
+        uses: actions/upload-artifact@v4
+        with:
+          name: tests_durations.json
+          path: tests_durations.json
