--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1261,7 +1261,7 @@ jobs:
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
       
       - name: "Install numpy"
-        run: python -m pip install numpy
+        run: python -m pip install numpy click
       
       - name: "Download artifacts"
         uses: actions/download-artifact@v4
@@ -1270,12 +1270,12 @@ jobs:
 
       - name: "List directories"
         run: |
+          cd artifacts
           find . -mindepth 2 -maxdepth 2 -type f
 
       - name: "Run script"
         run: |
-          cd artifacts
-          python ../.ci/pytest_summary.py
+          python  .ci/pytest_summary.py --directory artifacts --num 25 --save-file tests_durations.json
 
       - name: "Upload tests summary"
         uses: actions/upload-artifact@v4
