--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1247,7 +1247,7 @@ jobs:
 
   pytest-summary:
     name: Pytest summary for all the test jobs
-    needs: [build-test-remote] # build-test-ubuntu-local, build-test-ubuntu-minimal, build-test-ubuntu-console
+    needs: [build-test-remote] #, build-test-ubuntu-local, build-test-ubuntu-minimal, build-test-ubuntu-console]
     if: always()
     runs-on: ubuntu-22.04          
     steps:
@@ -1259,17 +1259,18 @@ jobs:
         with:
           cache: 'pip'
           python-version: ${{ env.MAIN_PYTHON_VERSION }}
-      
+
       - name: "Install numpy"
         run: python -m pip install numpy click
-      
+
       - name: "Download artifacts"
         uses: actions/download-artifact@v4
         with:
           path: "artifacts"
 
-      - run: |
-          ls -Rla artifacts
+      - name: "List directories"
+        run: |
+          echo "::group:: List directories:" && ls -Rla artifacts && echo "::endgroup::"
 
       - name: "Uncompress files"
         run: |
@@ -1277,11 +1278,15 @@ jobs:
 
       - name: "List directories"
         run: |
-          ls -Rla .
+          echo "::group:: List directories:" && ls -Rla . && echo "::endgroup::"
 
-      - name: "Run script"
+      - name: "Create summary"
         run: |
-          python .ci/pytest_summary.py --num 25 --save-file tests_durations.json
+          echo "# Test summary 🚀" >>  $GITHUB_STEP_SUMMARY
+          echo "The followin tables show a summary of tests duration and standard desviation for all the jobs." >>  $GITHUB_STEP_SUMMARY
+          echo "```" >>  $GITHUB_STEP_SUMMARY
+          python .ci/pytest_summary.py --num 25 --save-file tests_durations.json >> $GITHUB_STEP_SUMMARY
+          echo "```" >>  $GITHUB_STEP_SUMMARY
 
       - name: "Upload tests summary"
         uses: actions/upload-artifact@v4
