--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,7 @@ tests = [
     "pytest-profiling==1.8.1",
     "pytest-pyvista==0.1.9",
     "pytest-random-order==1.1.1",
+    "pytest-reportlog==0.4.0",
     "pytest-rerunfailures==15.0",
     "pytest-timeout==2.3.1",
     "pytest==8.3.4",
