--- a/pyproject.toml
+++ b/pyproject.toml
@@ -54,7 +54,7 @@ jupyter = [
 ]
 
 tests = [
-    "ansys-dpf-core==0.10.1",
+    #"ansys-dpf-core==0.10.1",
     "ansys-tools-visualization-interface==0.8.3",
     "autopep8==2.3.2",
     "matplotlib==3.10.0",
