refactor: pytest mark. Removing only-gui

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,7 +135,9 @@ filterwarnings = [
 markers = [
     "skip_grpc: skip tests using grpc",
     "gui: skip tests that launch the GUI interface",
+    "console: Run also console tests",
 ]
+
 testpaths = "tests"
 image_cache_dir = "tests/.image_cache"
 # Output logging records as they are emitted directly into the console
