refactor: removing warnings (#3763)
* fix: removing some warnings

* refactor: using isin

* test: raising warnings

* chore: adding changelog file 3763.added.md [dependabot-skip]

* fix: update regex pattern in logging tests for consistency

* fix: console arg in pytest cli

* fix: more warnings

* fix: marker

* test: removing dpf

* refactor: small refactor of warnings.

* fix: killing started processes during testing

* fix: killing started processes during testing

* feat: removing warning flag

* revert: "test: removing dpf"

This reverts commit ace806a0e981f66d69657ef938d4e8efffc9cdef.

* fix: tests

* fix: warnings

* fix: conftest

* refactor: pytest mark. Removing only-gui

---------

Co-authored-by: pyansys-ci-bot <92810346+pyansys-ci-bot@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -123,6 +123,7 @@ pymapdl = "ansys.mapdl.core.cli:main"
 addopts = "-rxXsa -vvv --maxfail=10 --random-order-bucket=class --random-order --durations=10  --timeout=180"
 junit_family = "legacy"
 filterwarnings = [
+    "ignore::ResourceWarning",
     "ignore::FutureWarning",
     "ignore::PendingDeprecationWarning",
     "ignore::DeprecationWarning",
@@ -134,7 +135,9 @@ filterwarnings = [
 markers = [
     "skip_grpc: skip tests using grpc",
     "gui: skip tests that launch the GUI interface",
+    "console: Run also console tests",
 ]
+
 testpaths = "tests"
 image_cache_dir = "tests/.image_cache"
 # Output logging records as they are emitted directly into the console
