build: downgrading vtk

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ tests = [
     "pytest-timeout==2.3.1",
     "pytest==8.3.4",
     "scipy==1.15.2",
-    "vtk==9.4.1",
+    "vtk<9.4.0",
 ]
 doc = [
     "ansys-dpf-core==0.10.1",
@@ -104,7 +104,7 @@ doc = [
     "sphinx==8.2.1",
     "sphinxcontrib-websupport==2.0.0",
     "sphinxemoji==0.3.1",
-    "vtk==9.4.1",
+    "vtk<9.4.0",
 ]
 
 [tool.flit.module]
